--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -18,10 +18,14 @@
   "home.directive-text": "Une directive personnalisée a été implémentée pour changer la couleur de l'état de l'icône dans la liste des utilisateurs (voir: userState.directive.ts)",
   "home.ve-title": "View Encapsulation",
   "home.ve-text": "Les composants partagés sont utilisés autour de l'application, ils utilisent l'encapsulation 'Shadow' (voir: bottom-sheet.component.ts, spinner.component.ts)",
+  "home.cd-text": "la liste des utilisateurs utilise OnPush détection",
+  "home.interceptors-text": "interceptors sont utilisés pour la détection des erreurs HTTP et pour transmettre le token de l'utilisateur",
   "users-page": "User page",
   "user-processing": "Traitement de la liste des utilisateurs, veuillez patienter",
   "Home": "Accueil",
   "nav.user": "Utilisateur identifié",
   "Users": "Utilisateurs",
-  "Login": "Connexion"
+  "Login": "Connexion",
+  "home.translations-text": "Ngrx-translate avec i18n est utilisé pour les traductions en anglais et en français. (la page d'accueil, la navigation et quelques éléments de la liste des utilisateurs sont traduit, il s'agit de tester les différentes fonctionnalités avec 'lazy loading', traduction dans le 'template' et fonctionnalité de marker()",
+  "home.translations-text2": "The favorite lanngugage of the user is stored in the local storage of the browser"
 }
