--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,7 +1,7 @@
 {
   "home.course": "Cours d'Angular",
   "home.requirements": "Spécification des exigences",
-  "home.using-the": "en utilisant le",
+  "home.using-the": "utilisation de",
   "home.auth-system-text": "le jeton est stocké sur le stockage local du navigateur",
   "home.pagination": "Pagination",
   "home.ang-mat-pagination-text": "- Utilisation du widget de pagination de 'angular material'. (voir: https: //material.angular.io/components/paginator/overview)",
@@ -27,5 +27,11 @@
   "Users": "Utilisateurs",
   "Login": "Connexion",
   "home.translations-text": "Ngrx-translate avec i18n est utilisé pour les traductions en anglais et en français. (la page d'accueil, la navigation et quelques éléments de la liste des utilisateurs sont traduit, il s'agit de tester les différentes fonctionnalités avec 'lazy loading', traduction dans le 'template' et fonctionnalité de marker()",
-  "home.translations-text2": "La langue préférée de l'utilisateur est sauvegardée dans le stockage local du navigateur"
+  "home.translations-text2": "La langue préférée de l'utilisateur est sauvegardée dans le stockage local du navigateur",
+  "home.va-text": "L'accesseur de valeur de contrôle est implémenté sur la page de connexion, pour la page utilisateur, j'ai utilisé la bibliothèque 'Angular Material' pour créer le formulaire et définir un validateur personnalisé.",
+  "home.dos-text": "Un 'Data Observable Service' est implémenté pour gérer pour la liste des utilisateurs, NgRX était trop compliqué.",
+  "home.ds-title": "Design et style",
+  "home.ds-text": "Pendant le développement du projet, j'ai essayé d'utiliser autant que possible la lib d''Angular Material' pour le design et les fonctionnalités.",
+  "home.deployement-title": "Déploiement",
+  "home.deployement-text": "Le projet est hébergé sur la plateforme cloud 'Azure', il est déployé sur une box spécifique récemment sortie et spécialement conçue pour le projet 'Angular' ou React. (voir: https://docs.microsoft.com/en-us/azure/storage/blobs/storage-blob-static-website)"
 }
