--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,5 @@
 {
-  "home.course": "Angular course",
+  "home.course": "Angular technical demonstration",
   "home.requirements": "Requirements",
   "home.using-the": "using the",
   "home.auth-system-text": "token is stored on the Local Storage of the browser",
