--- a/src/assets/i18n/fr.json
+++ b/src/assets/i18n/fr.json
@@ -1,5 +1,5 @@
 {
-  "home.course": "Cours d'Angular",
+  "home.course": "Angular démonstration technique",
   "home.requirements": "Spécification des exigences",
   "home.using-the": "utilisation de",
   "home.auth-system-text": "le jeton est stocké sur le stockage local du navigateur",
